--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Queenstagram by Queen Aisha</title>
+    <script type="module" crossorigin src="/assets/index.6fad3a8f.js"></script>
+    <link rel="stylesheet" href="/assets/index.155423c3.css">
+  </head>
+
+  <body>
+    <div id="app"></div>
+    
+  </body>
+</html>
